# hildon-status-menu

./: README  configure.ac
debian/: changelog  control  rules
src/: Makefile.am  hd-desktop.c  hd-display.c  hd-status-area-box.c  hd-status-area.c  hd-status-area.h  hd-status-menu-box.c  hd-status-menu.c  hd-status-menu.h  hildon-status-menu.c  sn-backend.c  sn-backend.h  sn-item.c  sn-item.h  sn-watcher.c  sn-watcher.h  sn-watcher.xml  systray-applet.c  systray-applet.h
